# AutoDriving-Planning-Control-Algorithm-Simulation-Carla

install/: local_setup.sh  setup.sh
install/carla_ackermann_control/share/carla_ackermann_control/: package.sh
install/carla_ackermann_msgs/share/carla_ackermann_msgs/: package.sh
install/carla_ad_agent/share/carla_ad_agent/: package.sh
install/carla_ad_demo/share/carla_ad_demo/: package.sh
install/carla_common/share/carla_common/: package.sh
install/carla_l5player_bridge_ego_vis/lib/carla_l5player_bridge_ego_vis/: carla_l5player_vis_ego_vehicle  hybridastar_initial_wolrd_node  longitudinal_control_pid  reference_line_recorder
install/carla_l5player_bridge_ego_vis/share/carla_l5player_bridge_ego_vis/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/carla_l5player_hybridastar_planner/share/carla_l5player_hybridastar_planner/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/carla_l5player_lqr_pid_controller/share/carla_l5player_lqr_pid_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/carla_l5player_mpc_controller/share/carla_l5player_mpc_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/carla_l5player_pid_controller/lib/carla_l5player_pid_controller/: carla_l5player_pid_controller_node
install/carla_l5player_pid_controller/share/carla_l5player_pid_controller/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/carla_l5player_pid_new_controller/lib/carla_l5player_pid_new_controller/: carla_l5player_pid_new_controller_node
log/: latest_build
src/l5player_controler/carla_l5player_bridge_ego_vis/: setup.py
src/l5player_controler/carla_l5player_hybridastar_planner/: CMakeLists.txt  package.xml
src/l5player_controler/carla_l5player_hybridastar_planner/include/carla_l5player_hybridastar_planner/: common.h  hybrid_a_star.h  node3d.h  visualization.h
src/l5player_controler/carla_l5player_hybridastar_planner/install/: local_setup.sh  setup.sh
src/l5player_controler/carla_l5player_hybridastar_planner/log/: latest_build
src/l5player_controler/carla_l5player_hybridastar_planner/src/: hybrid_a_star.cpp  visualization.cpp
src/l5player_planner/carla_l5player_hybridastar_planner/: CMakeLists.txt
src/l5player_planner/carla_l5player_hybridastar_planner/config/: hybridastar_parameters_configuration.yaml
src/l5player_planner/carla_l5player_hybridastar_planner/data/: obstacle_data.csv
src/l5player_planner/carla_l5player_hybridastar_planner/include/carla_l5player_hybridastar_planner/: common.h  hybridAstar.h  hybridAstar_search.h  hybridAstar_visualization.h  hybrid_a_star.h  node3d.h  rs_curve.h  util_tool.h  visualization.h
src/l5player_planner/carla_l5player_hybridastar_planner/launch/: hybridastar_launch.py
src/l5player_planner/carla_l5player_hybridastar_planner/src/: hybridAstar_search.cpp  hybridAstar_visualization.cpp  hybrid_a_star.cpp  rs_curve.cpp  util_tool.cpp
(+38 files in other folders)
